# ACS

./: ACS.service  ACS_control.service  ACS_server.service  CMakeLists.txt  README.md  VisionAlgorithm.cpp  install.sh
include/: CameraInterface.hpp  Main.hpp  ModbusInterface.hpp  ModbusServer.hpp  SocketClient.hpp  SocketServer.hpp
python_files/: comms.py  system_reset.py  tcpIPFunctions.py
src/: Main.cpp  VisionAlgorithm.cpp
